# estonian-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  fly.toml  metrics-history.csv  pyproject.toml  server.py  smithery.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  metrics-snapshot.yml
data/: legal_collocations.json
scripts/: README.md  build_fasttext.py  build_legal_collocations.py  eval_coverage.py  eval_inflection.py  fetch_riigiteataja.py
skills/: README.md
skills/estonian-writing-assistant/: SKILL.md
tests/: test_familiarity.py  test_http.py  test_legal.py  test_smoke.py
