[project]
name = "estonian-mcp"
version = "0.1.0"
description = "Local MCP server that wraps EstNLTK so AI agents can write better Estonian — morphology, lemmas, spell-check, NER, syllabification."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "estonian-mcp contributors" },
]
keywords = ["mcp", "estonian", "nlp", "estnltk", "llm", "claude", "spell-check", "morphology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Estonian",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "estnltk>=1.7.3",
]

[project.urls]
Homepage = "https://github.com/silly-geese/estonian-mcp"
Repository = "https://github.com/silly-geese/estonian-mcp"
Issues = "https://github.com/silly-geese/estonian-mcp/issues"
"Bug Reports" = "https://github.com/silly-geese/estonian-mcp/issues"

[project.scripts]
estonian-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
